--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         }
 
         .language-item.selected {
-            background: var(--tg-theme-button-color);
-            color: white;
+            /* background:  oklch(50.3% 0.214 259.815); */
+             color: var(--tg-theme-button-color); 
             border-color: var(--tg-theme-button-color);
         }
 
