--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
             <div class="card">
                 <div class="card-title">Asosiy ma'lumotlar</div>
                 <div class="input-group">
-                    <input required="" type="text" name="text" autocomplete="off" class="input">
+                    <input required="" type="text" name="text" autocomplete="off" class="input" id="topicInput">
                     <label class="user-label">Taqdimot mavzusi</label>
                 </div>
 
                 <div class="input-group">
-                    <input required="" type="text" name="text" autocomplete="off" class="input">
+                    <input required="" type="text" name="text" autocomplete="off" class="input" id="studentNameInput">
                     <label class="user-label">Ismingiz va familiyangiz</label>
                 </div>
 
                 <div class="input-group">
-                    <input required="" type="text" name="text" autocomplete="off" class="input">
+                    <input required="" type="text" name="text" autocomplete="off" class="input" id="teacherNameInput">
                         <label class="user-label">O'qituvchi ismi va familiyasi</label>
                 </div>
 
